added for learning

--- a/movie-dev.yml
+++ b/movie-dev.yml
@@ -10,3 +10,16 @@ spring:
     url: jdbc:h2:mem:appdb
 data:
    learning: git
+     learningalali1
+     learningalali2
+alalilearning1:
+  alalilearning2:
+    alalilearning3alalilearning1:
+      alalilearning2:
+        alalilearning3:Z
+
+wq
+:x
+
+"x
+
